vpc/cdk.out/vpc.template.json
{
  "Resources": {
    "VPCB9E5F0B4": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "12.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/Resource"
      }
    },
    "VPCingressSubnet1SubnetBB7FDF67": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "12.0.0.0/24",
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/ingressSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet1/Subnet"
      }
    },
    "VPCingressSubnet1RouteTableEEF02A64": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/ingressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet1/RouteTable"
      }
    },
    "VPCingressSubnet1RouteTableAssociation7700457B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCingressSubnet1RouteTableEEF02A64"
        },
        "SubnetId": {
          "Ref": "VPCingressSubnet1SubnetBB7FDF67"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet1/RouteTableAssociation"
      }
    },
    "VPCingressSubnet1DefaultRouteC1C9D77C": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCingressSubnet1RouteTableEEF02A64"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCIGWB7E252D3"
        }
      },
      "DependsOn": [
        "VPCVPCGW99B986DC"
      ],
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet1/DefaultRoute"
      }
    },
    "VPCingressSubnet1EIP46E19D36": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet1/EIP"
      }
    },
    "VPCingressSubnet1NATGateway06A5D97E": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VPCingressSubnet1EIP46E19D36",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VPCingressSubnet1SubnetBB7FDF67"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/ingressSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet1/NATGateway"
      }
    },
    "VPCingressSubnet2SubnetE30F0091": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "12.0.1.0/24",
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/ingressSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "ingress"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet2/Subnet"
      }
    },
    "VPCingressSubnet2RouteTable8565F2D0": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/ingressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet2/RouteTable"
      }
    },
    "VPCingressSubnet2RouteTableAssociation35C35494": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCingressSubnet2RouteTable8565F2D0"
        },
        "SubnetId": {
          "Ref": "VPCingressSubnet2SubnetE30F0091"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet2/RouteTableAssociation"
      }
    },
    "VPCingressSubnet2DefaultRoute8E2F45A7": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCingressSubnet2RouteTable8565F2D0"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCIGWB7E252D3"
        }
      },
      "DependsOn": [
        "VPCVPCGW99B986DC"
      ],
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet2/DefaultRoute"
      }
    },
    "VPCingressSubnet2EIP34D6A15B": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet2/EIP"
      }
    },
    "VPCingressSubnet2NATGateway19A049B5": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VPCingressSubnet2EIP34D6A15B",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VPCingressSubnet2SubnetE30F0091"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/ingressSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/ingressSubnet2/NATGateway"
      }
    },
    "VPCapplicationSubnet1SubnetFE5BD7C4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "12.0.2.0/24",
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/applicationSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/applicationSubnet1/Subnet"
      }
    },
    "VPCapplicationSubnet1RouteTable06DA588A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/applicationSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/applicationSubnet1/RouteTable"
      }
    },
    "VPCapplicationSubnet1RouteTableAssociationBD8DBEDA": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCapplicationSubnet1RouteTable06DA588A"
        },
        "SubnetId": {
          "Ref": "VPCapplicationSubnet1SubnetFE5BD7C4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/applicationSubnet1/RouteTableAssociation"
      }
    },
    "VPCapplicationSubnet1DefaultRouteDDC3EE0F": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCapplicationSubnet1RouteTable06DA588A"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCingressSubnet1NATGateway06A5D97E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/applicationSubnet1/DefaultRoute"
      }
    },
    "VPCapplicationSubnet2Subnet9AE2E808": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "12.0.3.0/24",
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/applicationSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "application"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/applicationSubnet2/Subnet"
      }
    },
    "VPCapplicationSubnet2RouteTableBE360162": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC/applicationSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/applicationSubnet2/RouteTable"
      }
    },
    "VPCapplicationSubnet2RouteTableAssociationB08E8C3F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCapplicationSubnet2RouteTableBE360162"
        },
        "SubnetId": {
          "Ref": "VPCapplicationSubnet2Subnet9AE2E808"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/applicationSubnet2/RouteTableAssociation"
      }
    },
    "VPCapplicationSubnet2DefaultRouteBFF28947": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCapplicationSubnet2RouteTableBE360162"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCingressSubnet2NATGateway19A049B5"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/applicationSubnet2/DefaultRoute"
      }
    },
    "VPCIGWB7E252D3": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc/VPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/IGW"
      }
    },
    "VPCVPCGW99B986DC": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPCB9E5F0B4"
        },
        "InternetGatewayId": {
          "Ref": "VPCIGWB7E252D3"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC/VPCGW"
      }
    }
  }
}
